--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 wait for a chance to prove my ability. I did also a great website design
             </p>
 
-            <a class="blue-button" href="https://www.facebook.com/AfridiSabbir/">Visit my site</a>
+            <a class="orange-button" href="https://www.facebook.com/AfridiSabbir/" target="_blank">Visit my site</a>
 
             <p class="single-text">check below and stay with my mission</p>
 
@@ -65,26 +65,29 @@
             <div class="half-width content-web">
                 <img src="images/illustrators/illustrator-3.png" alt="">
 
-                <h2>Web Design & Development</h2>
+                <h2>Web Programming</h2>
                 <p>Hi, I am a web programmer. I can do any web programme related work. if you need any work. I can do
                 </p>
             </div>
     </section>
 
-    <section>
-        <div class="flexible-container half-width building-image">
-            <img src="images/pictures/coding.png" alt="">
+    <section class="flexible-container">
+        <div>
+            <img class="half-width" src="images/pictures/coding.png" alt="">
         </div>
 
-        <div class="flexible-container">
+        <div class="building">
             <h1>Building a better web, together</h1>
 
-            <p>Google believes in an open, accessible, private, and secure web. We want to
+
+
+
+            <p class="google">Google believes in an open, accessible, private, and secure web. We want to
                 help developers take
                 advantage of the latest modern technologies to build amazing user experiences for everyone.</p>
 
-
         </div>
+
     </section>
 </body>
 
