--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
     <title>mission-20221</title>
 </head>
@@ -16,10 +20,13 @@
 <body>
     <section class="flexible-container">
         <div class="half-width">
-            <h1 class="header-text">
-                This is my journey
-            </h1>
-            <h1 class="header-text orange-color">mission 2022</h1>
+            <div class="border">
+                <h1 class="header-text">
+                    This is my journey
+                </h1>
+                <h1 class="header-text orange-color">mission 2022</h1>
+            </div>
+
 
             <p class="paragraph">
                 My 2022 mission is how to become a web developer. I am a hardworker person already I am doing a great
@@ -44,51 +51,91 @@
         <h1 class="mission"> At a glance my <span class="orange-color">mission</span> </h1>
 
         <div class="flexible-container">
-            <div class="half-width content-graphic">
+            <div class="glance-content">
                 <img src="images/illustrators/illustrator-1.png" alt="">
-                <h2> Graphic Design</h2>
+                <h3> Graphic Design</h3>
                 <p> Hello, I am a graphic designer. I can do any graphic elements design. if you need any element. I can
                     do
                 </p>
 
             </div>
 
-            <div class="half-width content-uiux">
+            <div class="glance-content">
                 <img src="images/illustrators/illustrator-2.png" alt="">
 
-                <h2>UI/UX Design</h2>
-                <p>Hi, I am a UI/UX designer. I can do any user interface and user experience elements design. if you
+                <h3>UI/UX Design</h3>
+                <p>Hi, I am a UI/UX designer. I can do any ui/ux elements design. if you
                     need any element. I can do
                 </p>
             </div>
 
-            <div class="half-width content-web">
+            <div class="glance-content">
                 <img src="images/illustrators/illustrator-3.png" alt="">
 
-                <h2>Web Programming</h2>
+                <h3>Web Programming</h3>
                 <p>Hi, I am a web programmer. I can do any web programme related work. if you need any work. I can do
                 </p>
             </div>
     </section>
 
-    <section class="flexible-container">
-        <div>
-            <img class="half-width" src="images/pictures/coding.png" alt="">
+    <section class="develop">
+        <div class="flexible-container">
+            <div class="develop-image">
+                <img src="images/pictures/coding.png" alt="">
+            </div>
+            <div class="develop-text">
+                <h2>MY web development <br> mission</h2>
+                <p class="paragraph">My 2022 mission is how to become a web developer. I am a hardworker person already
+                    I am doing a great job. I am
+                    wait for a chance to prove my ability. I did also a great website design</p>
+
+                <a class="orange-button" href="https://www.facebook.com/">Visit my website</a>
+            </div>
         </div>
-
-        <div class="building">
-            <h1>Building a better web, together</h1>
-
-
-
-
-            <p class="google">Google believes in an open, accessible, private, and secure web. We want to
-                help developers take
-                advantage of the latest modern technologies to build amazing user experiences for everyone.</p>
-
-        </div>
-
     </section>
+
+    <section class="develop">
+        <div class="flexible-container">
+
+            <div class="develop-text">
+                <h2>Check it my own blogs for <br> mission 2022</h2>
+                <p class="paragraph">Blog, in full Web log or Weblog, online journal where an individual, group, or
+                    corporation presents a record of activities, thoughts, or beliefs. Some blogs operate mainly as news
+                    filters, collecting various online sources and adding short comments and Internet links.</p>
+
+                <a class="orange-button" href="https://www.facebook.com/">Visit my website</a>
+            </div>
+            <div class="develop-image">
+                <img src="images/pictures/project.png" alt="">
+            </div>
+        </div>
+        <section class="client-opinion">
+            <div class="flexible-container">
+                <div class="author-image half-width">
+                    <img src="images/person/author.png" alt="">
+                </div>
+
+                <div class="half-width">
+                    <h2>Grow uour web development <br>
+                        <span class="orange-color">With us</span>
+                    </h2>
+
+                    <p class="tex-justify">We have been working for all over the world since 2020 from
+                        Bangladesh. Over 5 years some of our
+                        helping companies already reached their financial and branding goals.
+                        Our team is very professional to help you reach the ultimate goal. We always care about
+                        experience.</p>
+
+                    <a class="orange-button" href="https://www.facebook.com/">Visit my website</a>
+                </div>
+            </div>
+        </section>
+    </section>
+
+    <footer class="hardwork">
+        <h1>mission <span class="orange-color">2022</span></h1>
+        <p>Hard work, Perseverance, and Determination for 2022</p>
+    </footer>
 </body>
 
 </html>
