--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
                     I am doing a great job. I am
                     wait for a chance to prove my ability. I did also a great website design</p>
 
-                <a class="orange-button" href="https://www.facebook.com/">Visit my website</a>
+                <a class="orange-button" target="_blank" href="https://www.facebook.com/AfridiSabbir/">Visit my
+                    website</a>
             </div>
         </div>
     </section>
@@ -103,7 +104,8 @@
                     corporation presents a record of activities, thoughts, or beliefs. Some blogs operate mainly as news
                     filters, collecting various online sources and adding short comments and Internet links.</p>
 
-                <a class="orange-button" href="https://www.facebook.com/">Visit my website</a>
+                <a class="orange-button" target="_blank" href="https://www.facebook.com/AfridiSabbir/">Visit my
+                    website</a>
             </div>
             <div class="develop-image">
                 <img src="images/pictures/project.png" alt="">
@@ -126,7 +128,8 @@
                         Our team is very professional to help you reach the ultimate goal. We always care about
                         experience.</p>
 
-                    <a class="orange-button" href="https://www.facebook.com/">Visit my website</a>
+                    <a class="orange-button" target="_blank" href="https://www.facebook.com/AfridiSabbir/">Visit my
+                        website</a>
                 </div>
             </div>
         </section>
